package uno;

public abstract class Carte {
    private String couleur;
    private String valeur;

    public void appliqueEffet() {

    }

    public boolean estJouable(Carte carte) {

    }
}
