package uno;

import java.util.List;

public class Deck {
    private List<Carte> deck;

    public Carte piocherCarte() {

    }

    public void melanger() {

    }
}
