package uno;

import java.util.List;

public class Joueur {
    private String nomJoueur;
    private List<Carte> main;

    public void jouerCarte(Carte carte) {

    }

    public Carte piocherCarte() {

    }

    public void direUno() {

    }

    public boolean gagnant() {
        return false;
    }
}
