package uno;

public class UnoGame {
    private Joueur joueurCourant;
    private Deck deck;
    private Pioche piocheJetable;

    public UnoGame() {
        this.joueurCourant = new Joueur();
        this.deck = new Deck();
        this.piocheJetable = new Pioche();
    }

    public void commencerPartie() {

    }

    public void tourJoueur() {

    }

    public boolean finDeLaPartie() {
        if(joueurCourant.getNbC)
    }
}
